@@ -96,6 +96,7 @@
                     </archive>
                 </configuration>
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -116,6 +117,7 @@
                     <perCoreThreadCount>true</perCoreThreadCount>
                     <printSummary>true</printSummary>
                     <printFailures>true</printFailures>
+                    <argLine>-Xmx12g</argLine>
                 </configuration>
                 <executions>
                     <execution>
@@ -124,7 +126,6 @@
                             <goal>test</goal>
                         </goals>
                         <configuration>
-                            <argLine>--illegal-access=permit</argLine>
                             <systemPropertyVariables>
                                 <java.version>${java.version}</java.version>
                             </systemPropertyVariables>
